--- a/A1.html
+++ b/A1.html
@@ -1,3 +1,22 @@
 <!DOCTYPE html>
+<html>
+<head>
+<title>Ishaan Chand-A1</title>
+</head>
 
-<P>Welcome to my page!</P>
+<body>
+    <p><h1>Ishaan Chand</h1></p>
+    
+</body>
+
+
+
+
+
+
+
+
+
+
+
+</html>
