--- a/A1.html
+++ b/A1.html
@@ -5,8 +5,19 @@
 </head>
 
 <body>
-    <p><h1>Ishaan Chand</h1></p>
-    
+    <h1>Ishaan Chand</h1>
+    <p>Welcome to my profile.</p>
+    <p>Here are the links for all of my pages</p>
+    <p><a href="personal.html"> Personal Information</a></p>
+
+    <p><a href="interest.html">Interest in IT</a></p>
+
+    <p><a href="job.html"> Ideal Job</a></p>
+
+    <p><a href="profile.html"> Personal Profile</a></p>
+
+    <p><a href= "project.html"> Project Idea</a></p>
+
 </body>
 
 
