personal, job, interest (info)

--- a/interest.html
+++ b/interest.html
@@ -1,4 +1,27 @@
 <!DOCTYPE html>
 <html>
     <h1>Interest in IT</h1>
+    <h2> What is my interest in IT? Particular event which sparked interest?</h2>
+    <p>
+        Throughout my childhood, I have always had a deep interest in all things technology. 
+        My interest really began through my passion for video games and gaming consoles, the PlayStation to be specific. 
+        Only around 18 months ago I became increasingly interested and intrigued in the sector of cyber security and artificial intelligence and their increasing importance in the global community. 
+        Not much of an event but a person who has inspired me to pursue a career in the IT field would be my father, who has been involved in this sector for a better part of 20 years. 
+        His knowledge and experience has been very important for me to choose this course and pursue a career in IT in the future.   		
+</p>
+    <h2>Why did you choose RMIT?</h2>
+    <p>
+        I chose RMIT University to undertake this course because I strongly believe they can help and challenge me to prepare adequately for a successful career in the IT sector.
+         The electives and subjects which this course in particular has to offer also played a role in me choosing RMIT, 
+         this being the opportunity to pursue my interest in the fields of Artificial Intelligence and Cyber Security to be particular.
+ </p>
+    <h2>What do you expect to learn during your studies?</h2>
+    <p>
+        2 areas of information technology as I mentioned earlier which I’m really interested in are cyber security and artificial intelligence. 
+        Hopefully during my tenure in RMIT, I can learn about the different applications of AI in our community as well as 
+        educate and train myself to understand the importance of cyber security and its use as it continues to grow with a 
+        vast majority of the population shifting to the digital or ‘cloud’ world. Down the line, I also want to be able to 
+        incorporate my skills in the IT area with the more sales based/business sectors too, as this is something I feel
+         will assist me a lot with career opportunities down the line.
+</p>
 </html>
