--- a/job.html
+++ b/job.html
@@ -1,4 +1,34 @@
 <!DOCTYPE html>
 <html>
     <h1>Ideal Job</h1>
+    <p><a href="https://www.seek.com.au/job/53234949?type=standout#searchRequestToken=9c6796ab-a84e-4a50-bd0f-fd50d063a5bb"> Here is the link to the job advertisement</a></p>
+    <h3>Snapshots of the job advertisement</h3>
+
+
+
+
+
+    <h3>Analysis</h3>
+    <p>
+        The job, as shown in the above snapshot, is of an Enterprise Account Executive role. 
+        The client of the firm offer a range of IT services for their customers including services in cloud migration,
+         cyber security and managing services. What makes this position really appealing to me is the combination 
+         of the sales and IT sectors. I believe every company should have the ability to sell its services/products 
+         to its customers and along with a combination of my interests in IT make this a very fascinating role.
+    </p>
+    <p>
+        This job would require a substantial amount of experience in a similar field before stepping into this role. 
+        Skills required for the role would include organisational skills, communication and teamwork skills as well 
+        as strong leadership skills. Building new relationships with the client as well as utilising previous relationships 
+        would also be key to successfully perform in this role. Since the client of the firm is involved in the IT sector, 
+        a strong understanding of information technology and the client’s needs would also be important.
+    </p>
+    <p>
+        A vast majority of the skills mentioned above, I would be covering in my uni course. 
+        This would mostly involve the actual knowledge about the IT services including cyber security and cloud management. 
+        Skills such as organisational skills, teamwork and communication skills can be developed through participating 
+        in multiple group projects / assignments to perform or achieve a certain task. Working in teams allows you to 
+        be exposed to different ideas and viewpoints towards the same problem, which would almost certainly broaden your 
+        understanding about the topic or task.
+    </p>
 </html>
