--- a/personal.html
+++ b/personal.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
 <html>
     <h1>Personal Information</h1>
+    <p>
+        Hello there! My name is Ishaan Chand and I’m currently a first year student at RMIT, studying Information Technology. 
+        My student number at RMIT is s3899502 and my student email is s3899502@student.rmit.edu.au. 
+        I was born in India on the 13th of July 2002 and moved to Australia at the beginning of 2010. 
+        I attended Port Melbourne and Valkstone primary schools and finished my secondary education in Mckinnon Secondary College. 
+        Some of my hobbies include playing cricket, reading books and listening to music (preferably hip-hop and rap!). 
+        One interesting fact about me ( or my family) is that all 4 of us (myself, dad, mom and my sister) have 4 different last names!
+</p>
 </html>
