--- a/personal.html
+++ b/personal.html
@@ -9,4 +9,6 @@
         Some of my hobbies include playing cricket, reading books and listening to music (preferably hip-hop and rap!). 
         One interesting fact about me ( or my family) is that all 4 of us (myself, dad, mom and my sister) have 4 different last names!
 </p>
+<img src="IMG_1090.jpg" width="350" height="450">
+
 </html>
