--- a/profile.html
+++ b/profile.html
@@ -1,4 +1,38 @@
 <!DOCTYPE html>
 <html>
     <h1>Personal Profile</h1>
+    <h3>Myers-Briggs Test</h3>
+    <img src="personality.JPG" alt="Myers-Briggs Test">
+
+    <h3>Learning Style Test Results</h3>
+    <img src="online.JPG" alt="Online Test">
+
+    <h3> Personality Trait Test Results</h3>
+    <img src="big5.JPG" alt="Test Results">
+
+    <body>
+    <h4> What do these results mean?</h4>
+    <p>
+        The results of these tests showcase a variety of things. 
+        One common pattern visible throughout the results is highlighting how I am an 
+        introverted person who learns new things and topics through listening and being present
+        in the environment which I am learning in. 
+     </p>
+    <h4> How would these results influence my behaviour on a team?	</h4>
+    <p>
+        To be very honest, I would have to change my approach to assignments 
+        and tasks when working in groups rather than working individually. 
+        I would have to be more open in order to listen to different perspectives 
+        for the same topic and how I can use the information and knowledge gained 
+        through the cooperation with peers in my own work.
+    </p>
+    <h4> How should I take this into account when forming a team?	</h4>
+    <p>
+        As mentioned above, there are some changes towards my learning and teamwork skills 
+        which I’d have to implement on my behalf in order to successfully perform together 
+        in a group in order to achieve a certain goal. All of the changes would have to be 
+        enforced on my behalf rather than on the team. 
+    </p>
+    
+    </body>
 </html>
