--- a/project.html
+++ b/project.html
@@ -1,4 +1,99 @@
 <!DOCTYPE html>
 <html>
     <h1>Project Idea</h1>
+<body>
+<h2> Project Overview</h2>
+<p>
+    My project is based on an application or a website which is used for recruiting purposes, 
+    mostly for students. This site will cover various parts of the recruitment sectors including 
+    applicant or employee profiles, job advertisements in the area of the applicant as well as 
+    having mini courses to direct the employee in regards to the type of knowledge they need to 
+    have before applying for or entering a particular workplace. For example, if there was a job 
+    position available at a liquor handling store, the applicant will have access to a mini 
+    assessment / course module, which would give them an adequate amount of information, 
+    training as well as a certification, declaring them fit for the role.
+</p>
+
+<h2>Motivation</h2>
+<p>
+    My main motivation behind this project is because it is so relatable to my current life as a uni student. 
+    I strongly believe every student should have a part time job along with their studies so they get experience
+     and exposure from a professional workplace before they try and pursue the career of their post graduation. 
+     However, I also know the difficulties one could face when trying to apply for the job. Sometimes after 
+     applying for a job, one might not hear from the employer ever again in regards to the application or 
+     sometimes even if they are notified about their application, it is not the news which they were hoping for. 
+     I believe there should be a platform where students from high school and universities are given more than 
+     just a job title to find out what their role would consist of in order to prepare themselves better for their employment.
+</p>
+
+<h2> Project Description</h2>
+<h3>Layout</h3>
+<p> The layout of the site would be similar to a recruiting website’s layout. Meaning, this would contain the following basic features;
+  <p> > A toolbar at the top of the page where job types can be searched by keywords.</p>
+  <p> > Applicants can enter what location they are after as well as choosing a certain radius to the location entered.</p> 
+  <p> > Type of employment they are after, that being part time, casual, fixed term or full time.</p> 
+  <p> > Classification of the workplace. This can be chosen from a drop down menu which would basically contain all the jobs available in each respective sector. Some options from the drop down menu can include education, hospitality, sales, trades & services, etc.</p> 
+  <p> > There wouldn’t be an option to select the desired remuneration rate as this site is mostly targeted towards students and a large percentage of such jobs do not show the hourly rate on an advertisement, as it is usually discussed in an interview or induction. </p> 
+</p>
+
+<h2>Job advertisement example</h2>
+<i> Team Member at Dan Murphy's Caroline Springs</i>
+<p><b>Specific Requirments for the role;</b></p>
+<p>> Over the age of 18</p>
+<p>> Responsible service of Alcohol check (RSA)</p>
+
+<p>Each applicant for the job must have a RSA as it is a legal document/training required by the Victorian Government. 
+    The site will be able to guide the user to another page which will have exactly all the details required in order 
+    to complete the RSA.
+</p>
+<P> Once the applicant has completed the RSA or any required course / certification (such as the working with children’s check) 
+    all of their details will be linked to their account so it is easier for them to access all of their certificates 
+    or work related documents such as resumes and cover letters, every time they are applying for a job.
+</P>
+<p>All employers will have similar questions in regards to one’s working rights or questions about their previous working experience. 
+    All of these details will be pre-filled with the information provided by the user through their documents which they initially upload 
+    to the site, so that this can improve the timeliness of the applications and be much more convenient for the user. 
+</p>
+<h2>Employer Page</h2>
+<p> Another feature which I would like to include in the site would be for the employers themselves. 
+    All employers through their sign in page will have access to the applicant’s profiles. 
+    This way, the process of hiring the correct employee can be streamlined, saving the business valuable time and money. 
+</p>
+<p> Successful applicants will receive a message from the site in regards to their application which will have further details 
+    in regards to their interview and the next steps. 
+</p>
+<p> Where does that leave the unsuccessful applicants? One common event across most recruitment firms is that the unsuccessful 
+    applicants are left high and dry in regards to their application and are not sure of what is happening. 
+    One of our main objectives is to make sure that the applicants are fully aware of each stage of the process. 
+    This includes;
+</p>
+<p>> Notifying them when an application is submitted.</p>
+<p>> Application has been opened and read by the employer. </p>
+<p>> Notification message when either both successful or unsuccessful.</p>
+
+<h2>Tools and Skills required</h2>
+<p> A vast majority of tools and technologies used on this project would include web 
+    development software such as HTML/CSS, Flash creator, Analytics tools. 
+    Most of the focus would be in making sure that the site is easy to use for 
+    both the applicant and the employer, including easy to use navigation and 
+    information present on each page. The site itself in essence would be a large c
+    entral database which holds all the key information of all the applicants required 
+    by the employer. Hence expertise in the database area such as Microsoft Access or SQL 
+    would also be required. As mentioned above, the majority of the skills would be required 
+    in the HTML and CSS area of the site in ensuring that the site is aesthetic and easy to use.
+</p>
+
+<h2>Outcome</h2>
+<p> If the site is successfully launched then I personally believe it can assist 
+    a lot of people with their employment as well as firms with their recruitment. 
+    People will have access to all the relevant jobs according to their needs and 
+    if required will have the right accreditation for the role too. The process of 
+    recruitment can be an arduous one for most businesses without a large recruiting budget. 
+    The site should be able to successfully assist employers in choosing the right worker for 
+    their firm by showing them all the relevant details about the applicants.
+</p>
+
+
+
+</body>
 </html>
