--- a/A1.html
+++ b/A1.html
@@ -2,21 +2,28 @@
 <html>
 <head>
 <title>Ishaan Chand-A1</title>
+<link href="C:\Users\ishaa\Documents\IntroToIT A1\IntroToIT-A1\A1.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-    <h1>Ishaan Chand</h1>
-    <p>Welcome to my profile.</p>
-    <p>Here are the links for all of my pages</p>
-    <p><a href="personal.html"> Personal Information</a></p>
+    <h1 style="text-align: center;">Ishaan Chand</h1>
+    <p style="text-align: center;">Welcome to my profile.</p>
+    <p style="text-align: center;">Here are the links for all of my pages</p>
+    
+    
+    <p style="text-align: center;"><a href="personal.html"> Personal Information</a></p>
 
-    <p><a href="interest.html">Interest in IT</a></p>
+    <p style="text-align: center;"><a href="interest.html">Interest in IT</a></p>
 
-    <p><a href="job.html"> Ideal Job</a></p>
+    <p style="text-align: center;"><a href="job.html"> Ideal Job</a></p>
 
-    <p><a href="profile.html"> Personal Profile</a></p>
+    <p style="text-align: center;"><a href="profile.html"> Personal Profile</a></p>
 
-    <p><a href= "project.html"> Project Idea</a></p>
+    <p style="text-align: center;"><a href= "project.html"> Project Idea</a></p>
+
+    <p></p>
+    <p></p>
+    <p style="text-align: center;">Student ID: s3899502</p>
 
 </body>
 
