--- a/personal.html
+++ b/personal.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <h1>Personal Information</h1>
+    <title>Ishaan-Personal Info</title>
+    <link href="C:\Users\ishaa\Documents\IntroToIT A1\IntroToIT-A1\personal.css" rel="stylesheet" type="text/css">
+    
+<h1>Personal Information</h1>
+
+<body>
     <p>
         Hello there! My name is Ishaan Chand and I’m currently a first year student at RMIT, studying Information Technology. 
         My student number at RMIT is s3899502 and my student email is s3899502@student.rmit.edu.au. 
@@ -9,6 +14,7 @@
         Some of my hobbies include playing cricket, reading books and listening to music (preferably hip-hop and rap!). 
         One interesting fact about me ( or my family) is that all 4 of us (myself, dad, mom and my sister) have 4 different last names!
 </p>
+</body>
 <img src="IMG_1090.jpg" width="350" height="450">
 
 </html>
