--- a/interest.html
+++ b/interest.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <h1>Interest in IT</h1>
+    <title>Ishaan-Interest in IT</title>
+    <link href="C:\Users\ishaa\Documents\IntroToIT A1\IntroToIT-A1\interest.css" rel="stylesheet" type="text/css">
+    <h1 style="color: antiquewhite;">Interest in IT</h1>
+    <body  style="color: antiquewhite;">
     <h2> What is my interest in IT? Particular event which sparked interest?</h2>
     <p>
         Throughout my childhood, I have always had a deep interest in all things technology. 
@@ -24,4 +27,6 @@
         incorporate my skills in the IT area with the more sales based/business sectors too, as this is something I feel
          will assist me a lot with career opportunities down the line.
 </p>
+</body>
+<img src="What-is-Cyber-Security.jpg" width="450" height="350">
 </html>
