--- a/personal.html
+++ b/personal.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <title>Ishaan-Personal Info</title>
-    <link href="C:\Users\ishaa\Documents\IntroToIT A1\IntroToIT-A1\personal.css" rel="stylesheet" type="text/css">
-    
-<h1>Personal Information</h1>
+    <link href="C:\Users\ishaa\Documents\IntroToIT A1\IntroToIT-A1\personal.css" rel="stylesheet" type="text/css" >
+   
+    <body>
+    <h1>Personal Information</h1>
 
-<body>
-    <p>
+
+    <p style="color: rgb(0, 0, 0);">
         Hello there! My name is Ishaan Chand and I’m currently a first year student at RMIT, studying Information Technology. 
         My student number at RMIT is s3899502 and my student email is s3899502@student.rmit.edu.au. 
         I was born in India on the 13th of July 2002 and moved to Australia at the beginning of 2010. 
@@ -14,6 +15,7 @@
         Some of my hobbies include playing cricket, reading books and listening to music (preferably hip-hop and rap!). 
         One interesting fact about me ( or my family) is that all 4 of us (myself, dad, mom and my sister) have 4 different last names!
 </p>
+
 </body>
 <img src="IMG_1090.jpg" width="350" height="450">
 
