--- a/interest.html
+++ b/interest.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <title>Ishaan-Interest in IT</title>
-    <link href="C:\Users\ishaa\Documents\IntroToIT A1\IntroToIT-A1\interest.css" rel="stylesheet" type="text/css">
+    <link href="interest.css" rel="stylesheet" type="text/css">
     <h1 style="color: antiquewhite;">Interest in IT</h1>
     <body  style="color: antiquewhite;">
     <h2> What is my interest in IT? Particular event which sparked interest?</h2>
