--- a/profile.html
+++ b/profile.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
+    <title>Ishaan-Personal Profile</title>
+    <link href="C:\Users\ishaa\Documents\IntroToIT A1\IntroToIT-A1\profile.css" rel="stylesheet" type="text/css">
     <h1>Personal Profile</h1>
     <h3>Myers-Briggs Test</h3>
-    <img src="personality.JPG" alt="Myers-Briggs Test">
+    <img src="personality.JPG" alt="Myers-Briggs Test" width = "300" height="250">
 
     <h3>Learning Style Test Results</h3>
-    <img src="online.JPG" alt="Online Test">
+    <img src="online.JPG" alt="Online Test" width = "500" height="350">
 
     <h3> Personality Trait Test Results</h3>
-    <img src="big5.JPG" alt="Test Results">
+    <img src="big5.JPG" alt="Test Results" width = "500" height="350">
 
     <body>
     <h4> What do these results mean?</h4>
