--- a/A1.html
+++ b/A1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Ishaan Chand-A1</title>
-<link href="C:\Users\ishaa\Documents\IntroToIT A1\IntroToIT-A1\A1.css" rel="stylesheet" type="text/css">
+<link href="A1.css" rel="stylesheet" type="text/css">
 </head>
 
 
