--- a/personal.html
+++ b/personal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <title>Ishaan-Personal Info</title>
-    <link href="C:\Users\ishaa\Documents\IntroToIT A1\IntroToIT-A1\personal.css" rel="stylesheet" type="text/css" >
+    <link href="personal.css" rel="stylesheet" type="text/css" >
    
     <body>
     <h1>Personal Information</h1>
