--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <title>Ishaan-Personal Profile</title>
-    <link href="C:\Users\ishaa\Documents\IntroToIT A1\IntroToIT-A1\profile.css" rel="stylesheet" type="text/css">
+    <link href="profile.css" rel="stylesheet" type="text/css">
     <h1>Personal Profile</h1>
     <h3>Myers-Briggs Test</h3>
     <img src="personality.JPG" alt="Myers-Briggs Test" width = "300" height="250">
