--- a/profile.html
+++ b/profile.html
@@ -2,17 +2,18 @@
 <html>
     <title>Ishaan-Personal Profile</title>
     <link href="profile.css" rel="stylesheet" type="text/css">
-    <h1>Personal Profile</h1>
-    <h3>Myers-Briggs Test</h3>
+    
+    <h1 style="color: antiquewhite;">Personal Profile</h1>
+    <h3 style="color: antiquewhite;">Myers-Briggs Test Results</h3>
     <img src="personality.JPG" alt="Myers-Briggs Test" width = "300" height="250">
 
-    <h3>Learning Style Test Results</h3>
+    <h3 style="color: antiquewhite;">Learning Style Test Results</h3>
     <img src="online.JPG" alt="Online Test" width = "500" height="350">
 
-    <h3> Personality Trait Test Results</h3>
+    <h3 style="color: antiquewhite;"> Personality Trait Test Results</h3>
     <img src="big5.JPG" alt="Test Results" width = "500" height="350">
 
-    <body>
+    <body style="color: antiquewhite;" >
     <h4> What do these results mean?</h4>
     <p>
         The results of these tests showcase a variety of things. 
