--- a/project.html
+++ b/project.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
+    <title>Ishaan - Project Idea</title>
+    <link href="project.css" rel="stylesheet" type="text/css">
+
+
+    <body style="color: antiquewhite;">
     <h1>Project Idea</h1>
-<body>
+
 <h2> Project Overview</h2>
 <p>
     My project is based on an application or a website which is used for recruiting purposes, 
