buttons added on pages

--- a/interest.html
+++ b/interest.html
@@ -29,4 +29,5 @@
 </p>
 </body>
 <img src="What-is-Cyber-Security.jpg" width="450" height="350">
+<a href="job.html" style="vertical-align: middle;"><button>Ideal Job</button></a>
 </html>
