--- a/job.html
+++ b/job.html
@@ -33,5 +33,6 @@
         be exposed to different ideas and viewpoints towards the same problem, which would almost certainly broaden your 
         understanding about the topic or task.
     </p>
+    <a href="profile.html" style="vertical-align: middle;"><button>Personal Profile</button></a>
 </body>
 </html>
