--- a/profile.html
+++ b/profile.html
@@ -36,6 +36,6 @@
         in a group in order to achieve a certain goal. All of the changes would have to be 
         enforced on my behalf rather than on the team. 
     </p>
-    
+    <a href="project.html" style="vertical-align: middle;"><button>Project Idea</button></a>
     </body>
 </html>
